k8s/kustomize/infra/keycloak/base/keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workshop-keycloak-ingress
  labels:
    app: workshop-keycloak
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: workshop.keycloak
          http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                  service:
                    name: workshop-keycloak
                    port:
                      number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: workshop-keycloak
spec:
  selector:
    app: workshop-keycloak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-keycloak
  labels:
    app: workshop-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workshop-keycloak
  template:
    metadata:
      name: workshop-keycloak
      labels:
        app: workshop-keycloak
    spec:
      containers:
        - name: workshop-keycloak
          image: quay.io/keycloak/keycloak:26.5.4
          imagePullPolicy: IfNotPresent
          args:
            - 'start-dev'
            - '--import-realm'
          ports:
            - containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /health/started
              port: 9000
            periodSeconds: 10
            failureThreshold: 400
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            periodSeconds: 10
            failureThreshold: 3
          resources:
            limits:
              memory: "750Mi"
              cpu: "500m"
            requests:
              memory: "350Mi"
              cpu: "100m"
          volumeMounts:
            - mountPath: /opt/keycloak/data/import
              name: keycloak-config
              readOnly: true
            - mountPath: /opt/keycloak/data
              name: keycloak-data
      restartPolicy: Always
      volumes:
        - name: keycloak-config
          configMap:
            name: keycloak-config
        - name: keycloak-data
          persistentVolumeClaim:
            claimName: keycloak-data
